--- a/styles.css
+++ b/styles.css
@@ -1079,6 +1079,7 @@ p {
     overflow: hidden;
 }
 .footer {
+    background-color: #003366 !important;
     position: relative;
     background-size: cover;
     background-position: center;
@@ -1087,7 +1088,7 @@ p {
     text-align: center;
     padding: 2rem 1rem;
 }
-.footer::before {
+/*.footer::before {
     content: '';
     position: absolute;
     top: 0;
@@ -1107,11 +1108,11 @@ p {
     box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.8);
     z-index: 1;
     pointer-events: none;
-}
-.footer>* {
+}*/
+/*.footer>* {
     position: relative;
     z-index: 2;
-}
+}*/
 .container-icons {
     padding: 2rem 0;
     display: flex;
