modify: about section

--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,7 @@ nav .nav {
 /* Sección minimalista Sobre Nosotros */
 .about-minimal {
     padding: clamp(0.5rem, 2vw, 2rem) clamp(1rem, 3vw, 2rem) clamp(0.5rem, 2vw, 2rem) clamp(1rem, 3vw, 2rem);
-    display: flex;
+    display: column;
     align-items: center !important;
     justify-content: center !important;
     background: var(--white);
@@ -1504,4 +1504,7 @@ html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
+}
+.view-btn{
+    border: solid 2px #444 !important;
 }
