--- a/styles.css
+++ b/styles.css
@@ -1066,7 +1066,8 @@ p {
 }
 
 .contact-text h2 {
-  font-size: clamp(2.5rem, 6vw, 4.5rem);
+  /*font-size: clamp(2.5rem, 6vw, 4.5rem);*/
+  font-size: clamp(2rem, 6vw, 4rem);
   font-weight: 900;
   color: #222;
   margin: 0;
@@ -1078,7 +1079,7 @@ p {
 }
 
 .highlight-ideas {
-    font-size: clamp(3rem, 7vw, 8rem);
+    font-size: clamp(2.5rem, 7vw, 8rem);
   color: var(--yellow-primary);
 }
 
@@ -1092,6 +1093,7 @@ p {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-width: 100%;
 }
 
 .form-row {
@@ -1283,7 +1285,7 @@ footer {
       padding: 6rem 3rem 2rem 3rem;
     }
     .logo{
-        width: clamp(150px, 20vw, 210px);
+        width: clamp(180px, 20vw, 210px);
         height: auto;
     }
 
@@ -1336,13 +1338,6 @@ footer {
       color: #ff9900;
     }
 
-    /* Responsive */
-    @media (max-width: 768px) {
-      .footer-container {
-        flex-direction: column;
-        text-align: center;
-      }
-    }
 
 
 
